syntax = "proto3";

package user; // groups all under one file

service UserService { // this is like your API contract, all three APIs defined
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1; // If not found, server can return NOT_FOUND error instead
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}